k8s/host/deployment.yml
# Deployment definition for web-app pod
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app-deployment
  namespace: k8s-workshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: web-app
    spec:
      containers:
        - name: web-app
          image: chenlevin/k8s-workshop-web-app
          imagePullPolicy: Always
          ports:
            - containerPort: 4200
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 4200
            initialDelaySeconds: 10
            periodSeconds: 5
